# gundi-integration-dji-cloudapi

./: MANIFEST.in  README.md  RELEASING.md  conftest.py  copier.yml  mkdocs.yml  pyproject.toml  requirements-base.in  requirements.txt
.github/workflows/: _tests.yml  docs.yaml  main.yaml  publish.yaml
app/: api_schemas.py  main.py
app/actions/: __init__.py  core.py
app/routers/: actions.py  config_events.py  webhooks.py
app/services/: action_runner.py  action_scheduler.py  activity_logger.py  config_events_consumer.py  config_manager.py  core.py  errors.py  gundi.py  self_registration.py  state.py  utils.py  webhooks.py
app/settings/: __init__.py  base.py
app/webhooks/: __init__.py  configurations.py  core.py  handlers.py
app/webhooks/tests/: test_webhook_handler.py
app/webhooks/tests/files/: osd_fixes.json
docker/: Dockerfile
docs/: extension-api.md  fork-migration.md  index.md  quickstart.md
docs/superpowers/plans/: 2026-07-07-action-runner-library-extraction.md  2026-07-08-action-runner-cli-scaffolding.md  2026-07-08-action-runner-publishing.md  2026-07-09-docs-site.md  2026-07-09-password-grant-dx.md  2026-07-09-scaffold-local-dev.md
docs/superpowers/specs/: 2026-07-07-action-runner-library-design.md  2026-07-09-docs-site-design.md  2026-07-09-password-grant-dx-design.md  2026-07-09-scaffold-local-dev-design.md
examples/reference_connector/reference_connector/: configurations.py  handlers.py  main.py
examples/reference_connector/tests/: test_reference_connector.py
reserve-side/: osd_forwarder.py
reserve-side/deploy/: docker-compose.yml  login.html  mosquitto.conf  nginx.conf  osd-forwarder.env.example  osd-forwarder.service  patch_login_persist.py  setup.sh
src/gundi_action_runner/: __init__.py  app_factory.py  cli.py  decorators.py  registry.py  settings.py
src/gundi_action_runner/actions/: __init__.py  core.py
src/gundi_action_runner/routers/: actions.py  config_events.py  webhooks.py
src/gundi_action_runner/services/: action_runner.py  action_scheduler.py  activity_logger.py  config_manager.py  self_registration.py  state.py  webhooks.py
src/gundi_action_runner/testing/: fixtures.py
src/gundi_action_runner/webhooks/: core.py
template/: .env.example.jinja  .gitignore.jinja  Dockerfile.jinja  README.md.jinja  conftest.py.jinja  main.py.jinja  pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/local/: .env.local.example.jinja  LOCAL_DEVELOPMENT.md.jinja  docker-compose.yml.jinja
template/local/helpers/: create_subscriptions.sh
template/tests/: test_handlers.py.jinja
template/{{ package_name }}/: client.py.jinja  configurations.py.jinja  handlers.py.jinja  transformers.py.jinja
tests/: conftest.py  test_action_runner.py  test_activity_logger.py  test_app_factory.py  test_cli.py  test_config_events_consumer.py  test_config_manager.py  test_gundi_api.py  test_password_grant.py  test_pytest_plugin.py  test_registry.py  test_self_registration.py  test_shims.py  test_state_manager.py  test_template.py
